--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@nuxtjs/tailwindcss": "^6.6.6",
     "@pinia/nuxt": "^0.4.9",
     "babylonjs": "^6.0.0",
+    "gsap": "^3.11.5",
     "lodash": "^4.17.21",
-    "pinia": "^2.0.35"
+    "pinia": "^2.0.35",
+    "uuid": "^9.0.0"
   },
   "overrides": {
     "vue": "latest"
