--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gsap": "^3.11.5",
     "lodash": "^4.17.21",
     "pinia": "^2.0.35",
+    "tone": "^14.7.77",
     "uuid": "^9.0.0"
   },
   "overrides": {
